
 * Issue 207: added on_connect() and on_disconnect() callback methods to
   FTPHandler class.

Bugfixes:

 * Issue 131: IPv6 dual-stack support was broken.

 * Issue 206: can't change directory (CWD) when using UnixAuthorizer and process
   cwd is == "/root".

 * Issue 211: pyftpdlib doesn't work if deprecated py-sendfile 1.2.4 module is
   installed.

Major API changes since 0.7.0:

 * Unicode is now used instead of bytes pretty much everywhere.
 * FTPServer.server_forever() signature has changed from:
       serve_forever(timeout=1.0, use_poll=False, count=None)
   ...to:
       serve_forever(timeout=1.0, blocking=True):
 * asyncore.dispatcher and asynchat.async_chat classes has been replaced by:
   - pyftpdlib.lib.ioloop.Acceptor
   - pyftpdlib.lib.ioloop.Connector
   - pyftpdlib.lib.ioloop.AsyncChat
   Any implementation relying on them will no longer work.
 * New FilesystemError exception class.
 * New FTPHandler's on_connect() and on_disconnect() callbacks.


Version: 0.7.0 - Date: 2012-01-25
---------------------------------

Enhancements:

 * Issue #152: uploads (from server to client) on UNIX are now from 2x (Linux)
   to 3x (OSX) faster because of sendfile(2) system call usage.

 * Issue #155: AbstractedFS "root" and "cwd" are no longer read-only properties
   but can be set via setattr().

 * Issue #168: added FTPHandler.logerror() method. It can be overridden to
   provide more information (e.g. username) when logging exception tracebacks.

 * Issue #174: added support for SITE CHMOD command (change file mode).

 * Issue #177: setuptools is now used in setup.py

 * Issue #178: added anti flood script in demo directory.

 * Issue #181: added CallEvery class to call a function every x seconds.

 * Issue #185: pass Debian licenscheck tool.

 * Issue #189: the internal scheduler has been rewritten from scratch and it is
   an order of magnitude faster, especially for operations like cancel() which